; ModuleID = '/home/carl/AnghaBench/libuv/src/win/extr_signal.c_uv_signals_init.c'
source_filename = "/home/carl/AnghaBench/libuv/src/win/extr_signal.c_uv_signals_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@uv__signal_lock = common dso_local global i32 0, align 4
@uv__signal_control_handler = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uv_signals_init() #0 {
  %1 = call i32 @InitializeCriticalSection(i32* @uv__signal_lock)
  %2 = load i32, i32* @uv__signal_control_handler, align 4
  %3 = load i32, i32* @TRUE, align 4
  %4 = call i32 @SetConsoleCtrlHandler(i32 %2, i32 %3)
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %8, label %6

6:                                                ; preds = %0
  %7 = call i32 (...) @abort() #3
  unreachable

8:                                                ; preds = %0
  ret void
}

declare dso_local i32 @InitializeCriticalSection(i32*) #1

declare dso_local i32 @SetConsoleCtrlHandler(i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
